<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">趣.识别</string>

    <string name="string_rlv_empty">空空如也</string>
    <string name="string_start_ocr">开始提取图像文字...</string>
    <string name="string_result_ocr_error">提取失败...</string>

    <string name="btn_ok">Ok</string>
    <string name="txt_no_camera_permission">No camera permission</string>
    <string name="btn_start">Start</string>
    <string name="hint_enter_text">Enter text here</string>
    <string name="btn_create_pdf">Create PDF</string>
    <string name="btn_take_screenshot">Take screenshot</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[
            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.
        ]]>
    </string>
    <string name="string_result_ocr_title">提取文字结果</string>
    <string name="string_activity_result_ocr_title">提取文字结果</string>
    <string name="string_activity_setting">系统设置</string>
    <string name="string_activity_scan_images_title">图片多选</string>
    <string name="string_activity_history_result_ocr_title">历史提取记录</string>

    <string name="crop__saving">正在截取、压缩图片…</string>
    <string name="crop__wait">请等待…</string>
    <string name="crop__pick_error">无效的图片</string>

    <string name="crop__done">完成</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <string name="string_activity_crop_title">裁剪识别区域</string>
    <string name="string_copy_suc">拷贝成功</string>
    <string name="string_load_all_images">搜索手机所有图片...</string>

    <!--更新String-->
    <string name="update_title">发现全新版本</string>
    <string name="update_desc">一个全新的版本被发出，尝试更新一下？ </string>
    <string name="update_ok">更，现在就更</string>
    <string name="update_cancel">我拒绝</string>
    <string name="string_update_success">新的安装包下载成功</string>
    <string name="string_update_err">更新包下载失败</string>
    <string name="string_download_err">下载失败</string>
    <string name="string_open_apk_err">没有找到打开此类文件的程序</string>
    <string name="switch_off">关</string>
    <string name="switch_on">开</string>
    <string name="string_screenshot_service_switch">后台识别</string>
    <string name="string_screenshot_service_silent_switch">静默识别</string>

    <string name="picture_error">图片已损坏</string>
    <string name="picture_video_error">视频已损坏</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="string_screenshot_service_know">开启之后，本App可以后台监听您最新获取得图片，并尝试拉起文字识别页面，帮您快速进行提取文字操作。</string>
    <string name="string_screenshot_silent_service_know">开启之后，本App可以后台监听您最新获取得图片，并直接后台提取文字，提取成功后将复制到您的粘贴板，并提示您。</string>
    <string name="string_screenshot_service_know_title">这个开关有什么用？</string>
    <string name="string_screenshot_service_know_positive">了解了</string>
    <string name="string_silent_ocr_suc">静默识别成功且复制到了粘贴板</string>
    <string name="string_no_more_images_err">没有更多的图片</string>
    <string name="string_is_first_images_err">已经是最开始的图片了</string>
    <string name="string_ocr_words_count">识别提取出的文字数量：%1$s</string>
    <string name="string_ocr_suc_count">成功识别提取次数：%1$s</string>
    <string name="string_ocr_count">总识别提取次数：%1$s</string>
    <string name="string_sendback_content_is_empty">吐槽/反馈不能为空呐</string>
    <string name="string_feedback_suc">反馈成功，我们的开发帅逼，已经开始关注咯</string>
    <string name="string_feedback_err">反馈失败，请重试一下~</string>
    <string name="string_btn_feedback">吐槽/反馈</string>
    <string name="string_btn_all_images">全部照片</string>
    <string name="string_btn_history_result">历史识别记录</string>
    <string name="string_btn_take_photo">拍照识别</string>
    <string name="string_btn_open_photo">打开相册</string>
    <string name="string_btn_clear">清理识别的图片资源</string>
    <string name="string_clear_suc">清理图片资源完成</string>
    <string name="string_delete_file_title">确定要删除么？</string>
    <string name="string_delete_file_content">此功能将删除本App压缩缓存的图片资源。</string>
    <string name="string_delete_file_btn_ok">删！</string>
    <string name="string_delete_file_btn_cancel">不删</string>
    <string name="string_toast_ocr_suc">文字识别成功，并插入历史识别记录中。</string>
    <string name="string_toast_update_history_result_ocr">更新历史识别记录成功。</string>
    <string name="string_feedback_btn_ok">吐槽/反馈</string>
    <string name="string_feedback_our">因为这是一个工具类的应用，所以更多的是为了解决日常中的需要。\n所以各位小伙伴有什么问题、有什么吐槽，欢迎写下来~</string>
    <string name="string_register_ocr_error">图像识别服务注册失败，请保持网络退出重试。</string>
    <string name="string_register_ocr_suc">图像识别服务注册成功，随时准备待命~</string>
    <string name="string_register_ocr_no_network">图像识别需要借助网络，请保持网络畅通~</string>
    <string name="string_no_network">无网络，请保证网络畅通~</string>
    <string name="string_error_register_ocr">错误信息已经复制粘贴板</string>
    <string name="string_permission_camera_error">未授予拍照权限。</string>
    <string name="string_compress_switch">识别时开启图片压缩</string>
    <string name="string_compress_switch_sub">开启有助于提高识别速度和降低流量消耗，但是有可能会降低识别精度。</string>
</resources>
