<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.mdove.easycopy.activity.home.model.handle.MainHandler" />

        <variable
            name="vm"
            type="com.mdove.easycopy.activity.home.model.vm.MainStatisticsModelVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light">

        <TextView
            android:id="@+id/tv_ocr_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_item_history_result_ocr"
            android:layout_marginTop="@dimen/margin_item_history_result_ocr"
            android:text="@{vm.mOcrCount}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="总识别提取次数：99" />

        <TextView
            android:id="@+id/tv_ocr_suc_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_item_history_result_ocr"
            android:layout_marginTop="@dimen/margin_item_history_result_ocr"
            android:text="@{vm.mOcrSucCount}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="成功识别提取次数：98" />

        <TextView
            android:id="@+id/tv_ocr_words_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_item_history_result_ocr"
            android:layout_marginTop="@dimen/margin_item_history_result_ocr"
            android:text="@{vm.mOcrWordsCount}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ocr_count"
            tools:text="识别提取出的文字数量：999" />

        <RelativeLayout
            android:id="@+id/layout_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/layout_silent_switch">

            <ImageView
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_toLeftOf="@+id/tv_screenshot_service"
                android:onClick="@{()->handler.onClickScreenShotServiceKnow()}"
                android:src="@mipmap/ic_screenshot_service_know" />

            <TextView
                android:id="@+id/tv_screenshot_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_toLeftOf="@+id/switch_screen_shot"
                android:text="@string/string_screenshot_service_switch" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_screen_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:textOff="@string/switch_off"
                android:textOn="@string/switch_on"
                android:theme="@style/SwitchStyle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_silent_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_item_history_result_ocr"
            app:layout_constraintBottom_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_toLeftOf="@+id/tv_screenshot_silent_service"
                android:onClick="@{()->handler.onClickScreenShotSilentServiceKnow()}"
                android:src="@mipmap/ic_screenshot_service_know" />

            <TextView
                android:id="@+id/tv_screenshot_silent_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_toLeftOf="@+id/switch_screen_silent_shot"
                android:text="@string/string_screenshot_service_silent_switch" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_screen_silent_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:textOff="@string/switch_off"
                android:textOn="@string/switch_on"
                android:theme="@style/SwitchStyle" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_ocr_words_count">

            <TextView
                android:id="@+id/btn_float"
                android:layout_width="0dp"
                android:layout_height="@dimen/w_h_activity_main_btn"
                android:layout_margin="@dimen/margin_item_history_result_ocr"
                android:layout_weight="1"
                android:background="@drawable/bg_white_round"
                android:gravity="center"
                android:onClick="@{()->handler.onClickShowBall()}"
                android:text="悬浮窗"
                android:textColor="@color/black"
                android:textSize="@dimen/size_activity_main_btn"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/btn_take_photo"
                android:layout_width="0dp"
                android:layout_height="@dimen/w_h_activity_main_btn"
                android:layout_margin="@dimen/margin_item_history_result_ocr"
                android:layout_weight="1"
                android:onClick="@{()->handler.onClickTakePhoto()}">

                <RelativeLayout
                    android:id="@+id/view_take_photo_first"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_round">

                    <ImageView
                        android:id="@+id/ic_take_photo_first"
                        android:layout_width="@dimen/w_h_activity_main_iv_first"
                        android:layout_height="@dimen/w_h_activity_main_iv_first"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/ic_take_photo_first" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ic_take_photo_first"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8dp"
                        android:gravity="center"
                        android:text="@string/string_btn_take_photo"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_activity_main_btn" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_take_photo_last"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_round"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/ic_take_photo_last"
                        android:layout_width="@dimen/w_h_activity_main_iv_last"
                        android:layout_height="@dimen/w_h_activity_main_iv_last"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/ic_take_photo_last"
                        android:tint="@color/red" />
                </RelativeLayout>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layout_top">

            <RelativeLayout
                android:id="@+id/btn_feedback"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/w_h_activity_main_btn_linear"
                android:layout_marginLeft="@dimen/margin_item_history_result_ocr"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_weight="1"
                android:background="@drawable/bg_white_round"
                android:gravity="center"
                android:onClick="@{()->handler.onClickFeedBack()}">

                <ImageView
                    android:id="@+id/ic_feedback"
                    android:layout_width="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_height="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_feedback_first" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ic_feedback"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8dp"
                    android:gravity="center"
                    android:text="@string/string_btn_feedback"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_activity_main_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_open_photo"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/w_h_activity_main_btn_linear"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_weight="1"
                android:background="@drawable/bg_white_round"
                android:gravity="center"
                android:onClick="@{()->handler.onClickOpenPhoto()}">

                <ImageView
                    android:id="@+id/ic_open_photo"
                    android:layout_width="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_height="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_all_images" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ic_open_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8dp"
                    android:gravity="center"
                    android:text="@string/string_btn_open_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_activity_main_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_all_images"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/w_h_activity_main_btn_linear"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_weight="1"
                android:background="@drawable/bg_white_round"
                android:gravity="center"
                android:visibility="gone"
                android:onClick="@{()->handler.onClickAllImages()}">

                <ImageView
                    android:id="@+id/ic_all_images"
                    android:layout_width="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_height="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_all_images" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ic_all_images"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8dp"
                    android:gravity="center"
                    android:text="@string/string_btn_all_images"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_activity_main_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_history"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/w_h_activity_main_btn_linear"
                android:layout_marginRight="@dimen/margin_item_history_result_ocr"
                android:layout_weight="1"
                android:background="@drawable/bg_white_round"
                android:gravity="center"
                android:onClick="@{()->handler.onClickHistory()}">

                <ImageView
                    android:id="@+id/ic_history"
                    android:layout_width="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_height="@dimen/w_h_activity_main_iv_first_linear"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_history_result_first"
                    android:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ic_history"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8dp"
                    android:gravity="center"
                    android:text="@string/string_btn_history_result"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_activity_main_btn" />
            </RelativeLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</layout>
